# future_trajectory_half_final

./: .gitignore  README.md  pyproject.toml
app/: pyproject.toml
app/app/: __main__.py  main.py
app/app/core/: adapters.py  checkers.py  exceptions.py  parsers.py  readers.py  resolvers.py  types.py
src/dns_checker/: __main__.py
src/dns_checker/core/: schema.py
src/dns_checker/core/adapters/: __init__.py  cli.py  http.py
src/dns_checker/core/utils/: __init__.py  csv_.py  decorators.py  dns.py  net.py
