[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Timofey Neyenburg <neyenburgz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pydantic = "^1.10.5"
fire = "^0.5.0"
rich = "^13.3.1"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
